<resources>
    <string name="app_name">My First App</string>
    <string name="title_activity_database_tutorial">Database Tutorial</string>
    <string name="title_activity_viewpagerforViews">ViewPager Gallery</string>
    <string name="title_activity_listview">ListView Activity</string>
    <string name="title_activity_tictactoe">Tic Tac Toe Game</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="title_activity_recyclerview">RecyclerView Activity</string>
    <string name="title_activity_input_text">InputText Activity</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
    <string name="snackbar_message">Your name is %s and your pass is %s</string>
    <string name="version_number">Version: 1.0.0</string>

    <string name="home_fragment">Home Fragment</string>
    <string name="local_fragment">Local Fragment</string>
    <string name="top_fragment">Top Fragment</string>

    <string name="insert_data">Insert Data</string>
    <string name="view_data">View Data</string>
    <string name="search_data">Search Data</string>

    <string name="user_id">User ID</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="email">Email</string>

    <string name="delete">Delete</string>
    <string name="update">Update</string>

    <string name="clear">Clear</string>
    <string name="save">Save</string>

    <string name="open_nav_drawer">Open navigation drawer</string>
    <string name="close_nav_drawer">Close navigation drawer</string>

    <string name="ver_long_test">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam hendrerit lectus sed vestibulum finibus. In sed vulputate quam. Mauris tempor libero in ipsum mollis, nec vehicula nulla tincidunt. Morbi leo tellus, laoreet at consequat vitae, pellentesque non eros. Quisque accumsan eget quam nec maximus. Vestibulum ut semper felis, et aliquam risus. Morbi nec lacinia tortor. Mauris iaculis, arcu sed mollis scelerisque, libero dui semper arcu, vitae molestie lectus massa scelerisque ante. Suspendisse et feugiat nulla, vel consectetur odio. Duis rhoncus mauris a sapien posuere condimentum. Curabitur lectus nisl, fermentum eleifend tempus quis, laoreet ut ante. Suspendisse potenti. Nam aliquet elit augue, vitae auctor nisl laoreet eu. Ut placerat egestas lorem, in ultricies elit. Proin id sagittis justo, in dignissim felis. Donec leo lacus, condimentum sit amet turpis quis, lobortis condimentum urna.

Vivamus pretium cursus mi at vestibulum. Maecenas ut arcu leo. Proin condimentum ipsum vel tempus gravida. Pellentesque dictum nisi quis ex eleifend, at imperdiet felis lacinia. Etiam sagittis urna sit amet lorem pulvinar, non tempus nulla semper. Morbi ut odio quis nisi tristique sollicitudin vel sit amet ipsum. Sed eget orci sit amet velit dictum mattis. Sed non odio in justo pellentesque euismod ac nec felis. Nam ornare rutrum dui, sed pharetra arcu pretium et. Cras in turpis dignissim, ultricies neque non, sodales nisi. Phasellus lobortis leo eleifend augue scelerisque, scelerisque aliquet est sagittis. Duis tempus vel lectus in commodo.

Donec dapibus risus quam, non dapibus quam ultrices at. Donec et bibendum ex, sed iaculis augue. Integer nec ullamcorper velit. Aenean laoreet fringilla mattis. Vivamus vestibulum dapibus purus quis varius. Suspendisse non placerat enim, in maximus sem. Quisque ut libero in elit viverra tincidunt non et nulla. Curabitur dapibus posuere erat eget condimentum. Etiam at sem enim.

Etiam tincidunt odio lectus, ut hendrerit augue interdum a. Nunc eu risus ac velit ullamcorper volutpat id iaculis nisl. Duis eget maximus eros. Nulla nulla urna, dictum eget erat ut, malesuada tempor nunc. Ut vel risus lacinia, semper justo ac, egestas risus. Curabitur sem risus, pharetra ac sem condimentum, dictum dictum odio. Donec sagittis libero ac ligula lobortis tempor. In quis felis cursus, ornare nulla eu, sagittis dolor. Morbi nec ultricies lacus. Pellentesque lacus elit, hendrerit at elementum hendrerit, iaculis vel sem. Aliquam quis vulputate tellus. Integer quis volutpat ligula. Donec justo lectus, sollicitudin non aliquet vel, iaculis et velit. Nam pharetra nunc sed neque vestibulum feugiat. Nulla ex felis, egestas sit amet faucibus eget, iaculis sit amet odio. Aenean sodales fermentum urna sed tempor.

Praesent quam ligula, efficitur at turpis nec, tincidunt hendrerit nisl. Ut scelerisque vestibulum vehicula. Fusce tincidunt lacinia velit sit amet gravida. Pellentesque quis lectus vel dui accumsan rutrum. Praesent sed lacus at libero egestas commodo. Ut rutrum, est ut pretium sollicitudin, sapien metus ornare eros, eu dapibus metus est ut tellus. Donec feugiat tincidunt urna sed ullamcorper. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</string>

    <string-array name="main_activity_list_array">

        <item>@string/title_activity_listview</item>
        <item>@string/title_activity_tictactoe</item>
        <item>@string/title_activity_calculator</item>
        <item>@string/title_activity_recyclerview</item>
        <item>@string/title_activity_input_text</item>
        <item>@string/title_activity_fragment</item>
        <item>@string/title_activity_view_pager</item>
        <item>@string/title_activity_viewpagerforViews</item>
        <item>@string/title_activity_database_tutorial</item>

    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>